Daemon for send new packets

--- a/server/config.yml.sample
+++ b/server/config.yml.sample
@@ -19,6 +19,9 @@ db:
 server_owner:
   public_key_id: ''
   personal_id: ''
+server_transport_key:
+  private: ''
+  public: ''
 trust_net:
   servers_count_for_app: 10
   messages_list_size: 100
